# noise-cancellation-control-app

./: CMakeLists.txt  README.md
configs/: headphones-standards.json
include/: bluetooth-manager.hpp  noise-cancalletion-modes.hpp  noise-cancellation-mode.hpp  noise-cancellation-modes.hpp
include/bluetooth-standard/: abstract-standard.hpp
src/: bluetooth-manager.cpp  main.cpp
src/bluetooth-standard/: abstract-standard.cpp
src/qml/: DeviceSelector.qml  ModeButton.qml  NoiseCancellationModeMenu.qml  WindowControls.qml  main.qml  old-main.qml  resources.qrc
